# redos-linter

./: .gitignore  Justfile  LICENSE  README.md  checker.js  index.js  linter.py  package-lock.json  package.json  pyproject.toml  recheck.bundle.js  ruff.toml  test.py
src/redos_linter/: __init__.py  checker.js  recheck-entry.js  recheck.bundle.js
tests/: conftest.py  test.py  test_attack_string_limit.py  test_ignore_comments.py  test_integration.py  test_main_function.py  test_regex_extractor.py
