[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redos-linter"
version = "0.1.0"
description = "A fast linter that checks for ReDoS vulnerabilities in regex patterns"
authors = [{name = "RedOS Linter", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "recheck>=4.2.0",
    "click>=8.0.0",
    "colorama>=0.4.4",
    "pathspec>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.0.280",
    "mypy>=1.0.0",
]

[project.scripts]
redos = "redos_linter.cli:main"

[project.urls]
Homepage = "https://github.com/example/redos-linter"
Repository = "https://github.com/example/redos-linter"
Issues = "https://github.com/example/redos-linter/issues"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]