[project]
name = "redos-linter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lev Vereshchagin", email = "mail@vrslev.com" }
]
requires-python = ">=3.14"
dependencies = [
    "deno>=2.6.8",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
