[project]
name = "redos-linter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lev Vereshchagin", email = "mail@vrslev.com" }
]
requires-python = ">=3.10"
dependencies = [
    "deno>=2.6.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
redos-linter = "redos_linter:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
